2017-11-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Raise the maximum number of relative moves before a
	stroke so that a full circle as drawn by do_arc() does not glitch due
	to insertion of a "stroke xx yy M" sequence that resets the dot/dash
	pattern.
	Bug #1987

2017-11-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c(eval_plots):  Fix a regression.
	Emply y range for logscale y errors out rather than auto-extending the
	range with a warning. Extension can be handled by the same routine
	used for linear axes.
	Bug #1978

2017-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.c:  Remove obsolete comments and trivial
	typos. Add documentation section for piped input data.

2017-11-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (histogram_range_fiddling):  For stacked histograms,
	autoscaling did not distinguish between 'set xrange [*:*]' and 
	'set xrange [explicit_min:*]', always resetting min to -1.
	Bugfix

2017-10-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (draw_clip_arrow):  Do not call term->arrow() if the
	entire arrow is out of range.

	* src/graphics.c (plot_vectors):  The code for 2D  "plot with vectors"
	is redundant.  Replace the core of it with a call to draw_clip_arrow().

	* src/boundary.c (do_key_sample):  Illustrate revision of a
	draw_clip_arrow() call site to use (double) rather than (int)
	parameters.  The only reason for this is to allow draw_clip_arrow()
	itself to switch to (double) parameters if we decide that is useful,
	e.g. to handle arrows with length approaching zero.

2017-10-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_draw_one pm3d_plot): Move call of term->layer() with
	TERM_LAYER_BEGIN_PM3D_MAP and TERM_LAYER_END_PM3D_MAP from pm3d_draw_one
	to pm3d_plot in order to avoid insertion of line commands between the
	%pm3d_map_begin and pm3d surface commands in the postscript file